--- a/resources/src/jquery/jquery.tablesorter.less
+++ b/resources/src/jquery/jquery.tablesorter.less
@@ -8,7 +8,10 @@ table.jquery-tablesorter {
 		cursor: pointer;
 		background-repeat: no-repeat;
 		background-position: center right;
-		padding-right: 21px;
+		// Note: To avoid reflows, a padding is set in
+		// the jquery.tableSorter.styles module as a render blocking style.
+		// Please do not add any CSS rules here that impact the positioning of the element
+		// e.g. padding, margin, position or float.
 	}
 
 	th.headerSortUp {
